[package]
name = "waku-node"
version = "0.1.0"
edition = "2021"
default-run = "waku-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
async-std = { version = "1.11.0", features = ["attributes"] }
clap = { version = "3.2.3", features = ["derive"] }
libp2p = "0.43.0"
waku-protocol = { path = "../waku-protocol" }
