[package]
name = "waku-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
protobuf = "2"
libp2p = "0.43.0"
sha2 = "0.10.2"
async-trait = "0.1.53"
futures = "0.3.21"
async-std = { version = "1.11.0", features = ["attributes"] }

[build-dependencies]
protoc-rust = "2"

[dev-dependencies]

bs58 = "0.4.0"